21-alb-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: 191072690914.dkr.ecr.ap-south-1.amazonaws.com/payment-service:dashboard-v1
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
