21-alb-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payment
spec:
  selector:
    app: payment-service

  ports:
  - port: 3000
    targetPort: 3000

  type: ClusterIP
